force-app/main/default/objects/Email_Scoring__c/Email_Scoring__c.object-meta.xml
<CustomObject>
    <label>Email Scoring</label>
    <nameField>
        <displayFormat>ES-{0000000000}</displayFormat>
        <label>Email Scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Scoring</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>