force-app/main/default/objects/Email_Scoring__c/fields/Average_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Average_Accuracy__c</fullName>
    <formula>( Service_Quality__c +  Problem_Solving__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Accuracy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>