force-app/main/default/objects/Email_Scoring__c/fields/Average_Courtesy__c.field-meta.xml
<CustomField>
    <fullName>Average_Courtesy__c</fullName>
    <formula>( Greeting__c +  Responsiveness__c +  Personalize__c  +  Wording__c +  Closing__c )/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Courtesy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>