force-app/main/default/objects/Email_Scoring__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>Closing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>