force-app/main/default/objects/Email_Scoring__c/fields/Daily_Score__c.field-meta.xml
<CustomField>
    <fullName>Daily_Score__c</fullName>
    <formula>Monitoring_Accuracy__c +  Monitoring_Courtesy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>