force-app/main/default/objects/Email_Scoring__c/fields/EmailID__c.field-meta.xml
<CustomField>
    <fullName>EmailID__c</fullName>
    <label>EmailID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>