force-app/main/default/objects/Email_Scoring__c/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <label>Greeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>