force-app/main/default/objects/Email_Scoring__c/fields/Is_Same_Entity__c.field-meta.xml
<CustomField>
    <fullName>Is_Same_Entity__c</fullName>
    <formula>TEXT($User.Entity__c) = TEXT(Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Same Entity</label>
    <type>Checkbox</type>
</CustomField>