force-app/main/default/objects/Email_Scoring__c/fields/Monitoring_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Accuracy__c</fullName>
    <formula>0.7 *  Average_Accuracy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitoring Accuracy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>