force-app/main/default/objects/Email_Scoring__c/fields/Monitoring_Courtesy__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Courtesy__c</fullName>
    <formula>0.3 *  Average_Courtesy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitoring Courtesy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>