force-app/main/default/objects/Email_Scoring__c/fields/Personalize__c.field-meta.xml
<CustomField>
    <fullName>Personalize__c</fullName>
    <label>Personalize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>