force-app/main/default/objects/Email_Scoring__c/fields/Problem_Solving__c.field-meta.xml
<CustomField>
    <fullName>Problem_Solving__c</fullName>
    <label>Problem Solving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>