force-app/main/default/objects/Email_Scoring__c/fields/Service_Quality__c.field-meta.xml
<CustomField>
    <fullName>Service_Quality__c</fullName>
    <label>Service Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>