force-app/main/default/objects/Email_Scoring__c/fields/Wording__c.field-meta.xml
<CustomField>
    <fullName>Wording__c</fullName>
    <label>Wording</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>