force-app/main/default/objects/Email_Scoring__c/validationRules/Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Closing__c &lt;0,Closing__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Closing__c</errorDisplayField>
    <errorMessage>Closing should be in 0 to 100.</errorMessage>
</ValidationRule>