force-app/main/default/objects/Email_Scoring__c/validationRules/Greeting_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Greeting_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Greeting__c&lt;0,Greeting__c&gt;100)</errorConditionFormula>
    <errorDisplayField>Greeting__c</errorDisplayField>
    <errorMessage>Greeting score should be in 0 to 100.</errorMessage>
</ValidationRule>