force-app/main/default/objects/Email_Scoring__c/validationRules/Personalize.validationRule-meta.xml
<ValidationRule>
    <fullName>Personalize</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Personalize__c &lt;0,Personalize__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Personalize__c</errorDisplayField>
    <errorMessage>Personalize should be in 0 to 100.</errorMessage>
</ValidationRule>