force-app/main/default/objects/Email_Scoring__c/validationRules/Problem_Solving.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Solving</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Problem_Solving__c &lt;0,Problem_Solving__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Problem_Solving__c</errorDisplayField>
    <errorMessage>Problem Solving should be in 0 to 100.</errorMessage>
</ValidationRule>