force-app/main/default/objects/Email_Scoring__c/validationRules/Responsiveness.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsiveness</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Responsiveness__c &lt;0,Responsiveness__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Responsiveness__c</errorDisplayField>
    <errorMessage>Responsiveness should be in 0 to 100.</errorMessage>
</ValidationRule>