force-app/main/default/objects/Email_Scoring__c/validationRules/Service_Quality.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Quality</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Service_Quality__c &lt;0,Service_Quality__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Service_Quality__c</errorDisplayField>
    <errorMessage>Service Quality should be in 0 to 100.</errorMessage>
</ValidationRule>