force-app/main/default/objects/Email_Scoring__c/validationRules/Wording.validationRule-meta.xml
<ValidationRule>
    <fullName>Wording</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Wording__c &lt;0,Wording__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Wording__c</errorDisplayField>
    <errorMessage>Wording should be in 0 to 100.</errorMessage>
</ValidationRule>